# easy-tts-server

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_markdown.py
.github/workflows/: test.yml
src/easy_tts_server/: __init__.py  segmenter.py  utils.py
src/easy_tts_server/tts/: __init__.py  engine.py  streaming_buffer.py  synthesis_core.py  task_manager.py
tests/: test_equivalence_streaming.py  test_segmenter.py  test_tts_comprehensive.py
